Substitute fki prefix with os2

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/comment.less
@@ -34,7 +34,7 @@
 
 	.comment-body-wrapper {
 
-		.fki-comment-info {
+		.os2-comment-info {
 
 			span {
 				font-style: italic;
@@ -157,4 +157,4 @@
 // --------------------------------------------------
 
 // Comment mixin
-.fki-mixin-comment() {}
+.os2-mixin-comment() {}
