--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/file.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/file.less
@@ -10,17 +10,17 @@
 // Variables
 // --------------------------------------------------
 
-@fki-file-top-bottom-spacing: 8px;
-@fki-file-left-right-spacing: 0;
+@os2-file-top-bottom-spacing: 8px;
+@os2-file-left-right-spacing: 0;
 
-@fki-file-border-color: @border-color;
-@fki-file-border-width: 1px;
-@fki-file-border-style: solid;
+@os2-file-border-color: @border-color;
+@os2-file-border-width: 1px;
+@os2-file-border-style: solid;
 
-@fki-file-link-font-color: @brand-primary;
-@fki-file-link-hover-font-color: @brand-secondary;
-@fki-file-link-text-decoration: none;
-@fki-file-link-hover-text-decoration: underline;
+@os2-file-link-font-color: @brand-primary;
+@os2-file-link-hover-font-color: @brand-secondary;
+@os2-file-link-text-decoration: none;
+@os2-file-link-hover-text-decoration: underline;
 
 // --------------------------------------------------
 // Styling
@@ -30,12 +30,12 @@
 .file {
 
 	a {
-		color: @fki-file-link-font-color;
-		text-decoration: @fki-file-link-text-decoration;
+		color: @os2-file-link-font-color;
+		text-decoration: @os2-file-link-text-decoration;
 
 		&:hover {
-			color: @fki-file-link-hover-font-color;
-			text-decoration: @fki-file-link-hover-text-decoration;
+			color: @os2-file-link-hover-font-color;
+			text-decoration: @os2-file-link-hover-text-decoration;
 		}
 	}
 }
@@ -44,10 +44,10 @@
 .field-type-file {
 
 	.field-item {
-		padding: @fki-file-top-bottom-spacing @fki-file-left-right-spacing;
-		border-bottom-width: @fki-file-border-width;
-		border-bottom-style: @fki-file-border-style;
-		border-bottom-color: @fki-file-border-color;
+		padding: @os2-file-top-bottom-spacing @os2-file-left-right-spacing;
+		border-bottom-width: @os2-file-border-width;
+		border-bottom-style: @os2-file-border-style;
+		border-bottom-color: @os2-file-border-color;
 
 		.file {
 		}
