--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/footer-elements.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/footer-elements.less
@@ -3,52 +3,52 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-footer-elements
+// | - .os2-footer-elements
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-footer-elements-element-font-size: @font-size-small;
-@fki-footer-elements-element-font-weight: @font-weight;
+@os2-footer-elements-element-font-size: @font-size-small;
+@os2-footer-elements-element-font-weight: @font-weight;
 
-@fki-footer-elements-element-text-color: @text-color;
-@fki-footer-elements-element-hover-text-color: @fki-footer-elements-element-text-color;
+@os2-footer-elements-element-text-color: @text-color;
+@os2-footer-elements-element-hover-text-color: @os2-footer-elements-element-text-color;
 
-@fki-footer-elements-element-icon-font-size: @font-size-base;
-@fki-footer-elements-element-icon-color: @text-color;
-@fki-footer-elements-element-icon-hover-color: @brand-secondary;
+@os2-footer-elements-element-icon-font-size: @font-size-base;
+@os2-footer-elements-element-icon-color: @text-color;
+@os2-footer-elements-element-icon-hover-color: @brand-secondary;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Footer elements
-.fki-footer-elements {
+.os2-footer-elements {
 
-	.fki-footer-element {
-		font-size: @fki-footer-elements-element-font-size;
-		font-weight: @fki-footer-elements-element-font-weight;
-		color: @fki-footer-elements-element-text-color;
-		.line-height(@fki-footer-elements-element-font-size);
+	.os2-footer-element {
+		font-size: @os2-footer-elements-element-font-size;
+		font-weight: @os2-footer-elements-element-font-weight;
+		color: @os2-footer-elements-element-text-color;
+		.line-height(@os2-footer-elements-element-font-size);
 
 		.icon {
-			font-size: @fki-footer-elements-element-icon-font-size;
-			color: @fki-footer-elements-element-icon-color;
+			font-size: @os2-footer-elements-element-icon-font-size;
+			color: @os2-footer-elements-element-icon-color;
 			margin-right: 3px;
-			.line-height(@fki-footer-elements-element-icon-font-size);
+			.line-height(@os2-footer-elements-element-icon-font-size);
 		}
 
 		&:hover {
-			color: @fki-footer-elements-element-hover-text-color;
+			color: @os2-footer-elements-element-hover-text-color;
 
 			.icon {
-				color: @fki-footer-elements-element-icon-hover-color;
+				color: @os2-footer-elements-element-icon-hover-color;
 			}
 		}
 
-		+ .fki-footer-element {
+		+ .os2-footer-element {
 			margin-left: 10px;
 		}
 	}
@@ -64,77 +64,77 @@
 @media @media-query-mobile {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Print
 @media print {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // Touch
 .touch {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // No touch
 .no-touch {
 
 	// Footer elements
-	.fki-footer-elements {}
+	.os2-footer-elements {}
 }
 
 // --------------------------------------------------
@@ -142,4 +142,4 @@
 // --------------------------------------------------
 
 // Footer elements mixin
-.fki-mixin-footer-elements() {}
+.os2-mixin-footer-elements() {}
