--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-box-homebox
+// | - .os2-box-homebox
 // |
 
 // --------------------------------------------------
@@ -55,8 +55,8 @@
 		background: none;
 		margin-top: 0;
 
-		&.fki-box {
-			.fki-box;
+		&.os2-box {
+			.os2-box;
 		}
 
 		// Icons
@@ -110,27 +110,27 @@
 // Watermark
 #homebox {
 
-	.fki-box {
+	.os2-box {
 
-		&.fki-box-homebox {
+		&.os2-box-homebox {
 
-			&.fki-box-homebox-fællesnyt,
-			&.fki-box-homebox-kommmende-aktiviteter,
-			&.fki-box-homebox-markedspladsen {
-				.fki-box-watermarked;
+			&.os2-box-homebox-fællesnyt,
+			&.os2-box-homebox-kommmende-aktiviteter,
+			&.os2-box-homebox-markedspladsen {
+				.os2-box-watermarked;
 			}
 		}
 
-		&.fki-box-homebox-fællesnyt {
-			.fki-box-quinary;
+		&.os2-box-homebox-fællesnyt {
+			.os2-box-quinary;
 		}
 
-		&.fki-box-homebox-kommmende-aktiviteter {
-			.fki-box-tertiary;
+		&.os2-box-homebox-kommmende-aktiviteter {
+			.os2-box-tertiary;
 		}
 
-		&.fki-box-homebox-markedspladsen {
-			.fki-box-quaternary;
+		&.os2-box-homebox-markedspladsen {
+			.os2-box-quaternary;
 		}
 	}
 }
@@ -143,77 +143,77 @@
 @media @media-query-mobile {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Print
 @media print {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // Touch
 .touch {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // No touch
 .no-touch {
 
 	// Homebox
-	.fki-box-homebox {}
+	.os2-box-homebox {}
 }
 
 // --------------------------------------------------
@@ -221,4 +221,4 @@
 // --------------------------------------------------
 
 // Homebox mixin
-.fki-mixin-box-homebox() {}
+.os2-mixin-box-homebox() {}
