--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/links.less
@@ -3,51 +3,51 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-links
+// | - .os2-links
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-links-font-size: @fki-footer-elements-element-font-size;
-@fki-links-font-weight: @fki-footer-elements-element-font-weight;
+@os2-links-font-size: @os2-footer-elements-element-font-size;
+@os2-links-font-weight: @os2-footer-elements-element-font-weight;
 
-@fki-links-text-color: @fki-footer-elements-element-text-color;
-@fki-links-hover-text-color: @fki-footer-elements-element-hover-text-color;
+@os2-links-text-color: @os2-footer-elements-element-text-color;
+@os2-links-hover-text-color: @os2-footer-elements-element-hover-text-color;
 
-@fki-links-icon-font-size: @fki-footer-elements-element-icon-font-size;
-@fki-links-icon-color: @fki-footer-elements-element-icon-color;
-@fki-links-icon-hover-color: @fki-footer-elements-element-icon-hover-color;
+@os2-links-icon-font-size: @os2-footer-elements-element-icon-font-size;
+@os2-links-icon-color: @os2-footer-elements-element-icon-color;
+@os2-links-icon-hover-color: @os2-footer-elements-element-icon-hover-color;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Links
-.fki-links {
+.os2-links {
 
 	.number-of-files a,
 	.flag {
-		font-size: @fki-links-font-size;
-		font-weight: @fki-links-font-weight;
-		color: @fki-links-text-color;
+		font-size: @os2-links-font-size;
+		font-weight: @os2-links-font-weight;
+		color: @os2-links-text-color;
 
 		&:before {
 			display: inline-block;
 			font-family: FontAwesome;
-			font-size: @fki-links-icon-font-size;
-			color: @fki-links-icon-color;
+			font-size: @os2-links-icon-font-size;
+			color: @os2-links-icon-color;
 			margin-right: 3px;
-			.line-height(@fki-links-icon-font-size);
+			.line-height(@os2-links-icon-font-size);
 			.transition(all @bs3-designer-transition-time ease-in-out);
 		}
 
 		&:hover {
-			color: @fki-links-hover-text-color;
+			color: @os2-links-hover-text-color;
 
 			&:before {
-				color: @fki-links-icon-hover-color;
+				color: @os2-links-icon-hover-color;
 			}
 		}
 	}
@@ -140,63 +140,63 @@
 @media @media-query-mobile {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // Print
 @media print {
 
 	// Links
-	.fki-links {
+	.os2-links {
 	    display: none;
 	}
 }
@@ -205,14 +205,14 @@
 .touch {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // No touch
 .no-touch {
 
 	// Links
-	.fki-links {}
+	.os2-links {}
 }
 
 // --------------------------------------------------
@@ -220,4 +220,4 @@
 // --------------------------------------------------
 
 // Links mixin
-.fki-mixin-links() {}
+.os2-mixin-links() {}
