--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/user-picture.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/user-picture.less
@@ -108,4 +108,4 @@
 // --------------------------------------------------
 
 // User picture mixin
-.fki-mixin-user-picture() {}
+.os2-mixin-user-picture() {}
