--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser.less
@@ -3,38 +3,38 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-node-teaser
+// | - .os2-node-teaser
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-node-teaser-inner-top-bottom-spacing: 10px;
-@fki-node-teaser-inner-entity-info-top-spacing: @default-heading-top-bottom-spacing;
-@fki-node-teaser-inner-heading-top-bottom-spacing: @default-heading-top-bottom-spacing;
-@fki-node-teaser-inner-body-top-bottom-spacing: @default-body-top-bottom-spacing;
-@fki-node-teaser-inner-footer-top-bottom-spacing: @default-footer-top-bottom-spacing;
-@fki-node-teaser-inner-left-right-spacing: @default-left-right-spacing;
+@os2-node-teaser-inner-top-bottom-spacing: 10px;
+@os2-node-teaser-inner-entity-info-top-spacing: @default-heading-top-bottom-spacing;
+@os2-node-teaser-inner-heading-top-bottom-spacing: @default-heading-top-bottom-spacing;
+@os2-node-teaser-inner-body-top-bottom-spacing: @default-body-top-bottom-spacing;
+@os2-node-teaser-inner-footer-top-bottom-spacing: @default-footer-top-bottom-spacing;
+@os2-node-teaser-inner-left-right-spacing: @default-left-right-spacing;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Teaser
-.fki-node-teaser {
-    padding: @fki-node-teaser-inner-top-bottom-spacing 0;
+.os2-node-teaser {
+    padding: @os2-node-teaser-inner-top-bottom-spacing 0;
 
-    .fki-node-teaser-info {
-        padding: @fki-node-teaser-inner-entity-info-top-spacing @fki-node-teaser-inner-left-right-spacing;
+    .os2-node-teaser-info {
+        padding: @os2-node-teaser-inner-entity-info-top-spacing @os2-node-teaser-inner-left-right-spacing;
         padding-top: 0;
     }
 
     // Heading
-    .fki-node-teaser-heading {
-        padding: @fki-node-teaser-inner-heading-top-bottom-spacing @fki-node-teaser-inner-left-right-spacing;
+    .os2-node-teaser-heading {
+        padding: @os2-node-teaser-inner-heading-top-bottom-spacing @os2-node-teaser-inner-left-right-spacing;
 
-        .fki-node-teaser-heading-title {
+        .os2-node-teaser-heading-title {
             .heading-h4;
             margin: 0;
         }
@@ -45,26 +45,26 @@
     }
 
     // Image
-    .fki-node-teaser-image-container {
+    .os2-node-teaser-image-container {
         max-width: 120px;
     }
-    .fki-node-teaser-image {
-        padding-left: @fki-node-teaser-inner-left-right-spacing;
+    .os2-node-teaser-image {
+        padding-left: @os2-node-teaser-inner-left-right-spacing;
     }
 
     // Body
-    .fki-node-teaser-body {
-        padding: @fki-node-teaser-inner-body-top-bottom-spacing @fki-node-teaser-inner-left-right-spacing;
+    .os2-node-teaser-body {
+        padding: @os2-node-teaser-inner-body-top-bottom-spacing @os2-node-teaser-inner-left-right-spacing;
         padding-bottom: 0;
 
-        + .fki-node-teaser-footer {
+        + .os2-node-teaser-footer {
             padding-top: 0;
         }
     }
 
     // Footer
-    .fki-node-teaser-footer {
-        padding: @fki-node-teaser-inner-footer-top-bottom-spacing @fki-node-teaser-inner-left-right-spacing;
+    .os2-node-teaser-footer {
+        padding: @os2-node-teaser-inner-footer-top-bottom-spacing @os2-node-teaser-inner-left-right-spacing;
         padding-bottom: 0;
     }
 }
