--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/taxonomy-term/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/taxonomy-term/full/full.less
@@ -3,48 +3,48 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-taxonomy-term-full
+// | - .os2-taxonomy-term-full
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-taxonomy-term-full-icon-font-color: @body-bg;
+@os2-taxonomy-term-full-icon-font-color: @body-bg;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Full taxonomy term
-.fki-taxonomy-term-full {
+.os2-taxonomy-term-full {
 
-	.fki-taxonomy-term-full-heading {
+	.os2-taxonomy-term-full-heading {
 
-		.fki-taxonomy-term-full-heading-title {
+		.os2-taxonomy-term-full-heading-title {
 			.heading-h2;
 			margin: 8px 0;
 		}
 	}
 
-	.fki-taxonomy-term-full-body {
+	.os2-taxonomy-term-full-body {
 
-		.fki-taxonomy-term-full-body-heading {
+		.os2-taxonomy-term-full-body-heading {
 
-			.fki-taxonomy-term-full-body-heading-title {
+			.os2-taxonomy-term-full-body-heading-title {
 				.heading-h2;
 				margin: 8px 0;
 			}
 		}
 	}
 
-	.fki-taxonomy-term-full-icon {
+	.os2-taxonomy-term-full-icon {
 		vertical-align: middle;
 		text-align: right;
 
 		.fa {
 			font-size: 60px;
-			color: @fki-taxonomy-term-full-icon-font-color;
+			color: @os2-taxonomy-term-full-icon-font-color;
 		}
 	}
 
@@ -61,77 +61,77 @@
 @media @media-query-mobile {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Print
 @media print {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // Touch
 .touch {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // No touch
 .no-touch {
 
 	// Full taxonomy term
-	.fki-taxonomy-term-full {}
+	.os2-taxonomy-term-full {}
 }
 
 // --------------------------------------------------
@@ -139,4 +139,4 @@
 // --------------------------------------------------
 
 // Full taxonomy term mixin
-.fki-mixin-taxonomy-term-full() {}
+.os2-mixin-taxonomy-term-full() {}
