--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/box.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-box
+// | - .os2-box
 // |
 
 // --------------------------------------------------
@@ -11,55 +11,55 @@
 // --------------------------------------------------
 
 
-@fki-box-background-color: 	#fff;
-@fki-box-border-radius: 	 	@border-radius-base;
+@os2-box-background-color: 	#fff;
+@os2-box-border-radius: 	 	@border-radius-base;
 
-@fki-box-heading-top-bottom-spacing: 10px;
-@fki-box-heading-left-right-spacing: @default-left-right-spacing;
+@os2-box-heading-top-bottom-spacing: 10px;
+@os2-box-heading-left-right-spacing: @default-left-right-spacing;
 
-@fki-box-body-top-bottom-spacing: 5px;
-@fki-box-body-left-right-spacing: @default-left-right-spacing;
+@os2-box-body-top-bottom-spacing: 5px;
+@os2-box-body-left-right-spacing: @default-left-right-spacing;
 
-@fki-box-footer-top-bottom-spacing: 5px;
-@fki-box-footer-left-right-spacing: @default-left-right-spacing;
+@os2-box-footer-top-bottom-spacing: 5px;
+@os2-box-footer-left-right-spacing: @default-left-right-spacing;
 
 // Responsive
-@fki-box-xs-stacked-spacing: floor( (@grid-gutter-width / 3) );
-@fki-box-sm-stacked-spacing: floor( (@grid-gutter-width / 3) );
-@fki-box-md-stacked-spacing: floor( (@grid-gutter-width / 2) );
-@fki-box-lg-stacked-spacing: floor( (@grid-gutter-width / 2) );
+@os2-box-xs-stacked-spacing: floor( (@grid-gutter-width / 3) );
+@os2-box-sm-stacked-spacing: floor( (@grid-gutter-width / 3) );
+@os2-box-md-stacked-spacing: floor( (@grid-gutter-width / 2) );
+@os2-box-lg-stacked-spacing: floor( (@grid-gutter-width / 2) );
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Box
-.fki-box {
-	background-color: @fki-box-background-color;
-	border-radius: @fki-box-border-radius;
+.os2-box {
+	background-color: @os2-box-background-color;
+	border-radius: @os2-box-border-radius;
 
-	.fki-box-heading {
-		padding: @fki-box-heading-top-bottom-spacing @fki-box-heading-left-right-spacing;
-		.border-top-radius(@fki-box-border-radius);
+	.os2-box-heading {
+		padding: @os2-box-heading-top-bottom-spacing @os2-box-heading-left-right-spacing;
+		.border-top-radius(@os2-box-border-radius);
 
 		.pane-title,
-		.fki-box-heading-title {
+		.os2-box-heading-title {
 			margin: 0;
 			.heading-h4;
 			text-transform: uppercase;
 		}
 	}
 
-	.fki-box-body {
-		padding: @fki-box-body-top-bottom-spacing @fki-box-body-left-right-spacing;
+	.os2-box-body {
+		padding: @os2-box-body-top-bottom-spacing @os2-box-body-left-right-spacing;
 
-		+ .fki-box-footer {
+		+ .os2-box-footer {
 			padding-top: 0;
 		}
 	}
 
-	.fki-box-footer {
-		padding: @fki-box-footer-top-bottom-spacing @fki-box-footer-left-right-spacing;
+	.os2-box-footer {
+		padding: @os2-box-footer-top-bottom-spacing @os2-box-footer-left-right-spacing;
 	}
 }
 
@@ -67,31 +67,31 @@
 // Variants
 // --------------------------------------------------
 
-.fki-box,
-.fki-box-primary {
-	.fki-mixin-box(@state-primary-bg, @state-primary-text);
+.os2-box,
+.os2-box-primary {
+	.os2-mixin-box(@state-primary-bg, @state-primary-text);
 }
 
-.fki-box-secondary {
-	.fki-mixin-box(@state-secondary-bg, @state-secondary-text);
+.os2-box-secondary {
+	.os2-mixin-box(@state-secondary-bg, @state-secondary-text);
 }
 
-.fki-box-tertiary {
-	.fki-mixin-box(@state-tertiary-bg, @state-tertiary-text);
+.os2-box-tertiary {
+	.os2-mixin-box(@state-tertiary-bg, @state-tertiary-text);
 }
 
-.fki-box-quaternary {
-	.fki-mixin-box(@state-quaternary-bg, @state-quaternary-text);
+.os2-box-quaternary {
+	.os2-mixin-box(@state-quaternary-bg, @state-quaternary-text);
 }
 
-.fki-box-quinary {
-	.fki-mixin-box(@state-quinary-bg, @state-quinary-text);
+.os2-box-quinary {
+	.os2-mixin-box(@state-quinary-bg, @state-quinary-text);
 }
 
-.fki-box-watermarked {
+.os2-box-watermarked {
 
 	&,
-	>	.fki-box {
+	>	.os2-box {
 		background-image: url('../img/logo_watermark.png');
 		background-repeat: no-repeat;
 		background-position: bottom right @default-left-right-spacing;
@@ -106,30 +106,30 @@
 @media @media-query-mobile {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Box
-	.fki-box {
-		margin-bottom: @fki-box-xs-stacked-spacing !important;;
+	.os2-box {
+		margin-bottom: @os2-box-xs-stacked-spacing !important;;
 	}
 
-	.fki-box-small-spacing {
+	.os2-box-small-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-xs-stacked-spacing / 3) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-xs-stacked-spacing / 3) ) !important;;
 		}
 	}
 
-	.fki-box-large-spacing {
+	.os2-box-large-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-xs-stacked-spacing * 2) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-xs-stacked-spacing * 2) ) !important;;
 		}
 	}
 }
@@ -138,30 +138,30 @@
 @media @media-query-tablet {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Box
-	.fki-box {
-		margin-bottom: @fki-box-sm-stacked-spacing !important;;
+	.os2-box {
+		margin-bottom: @os2-box-sm-stacked-spacing !important;;
 	}
 
-	.fki-box-small-spacing {
+	.os2-box-small-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-sm-stacked-spacing / 3) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-sm-stacked-spacing / 3) ) !important;;
 		}
 	}
 
-	.fki-box-large-spacing {
+	.os2-box-large-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-sm-stacked-spacing * 2) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-sm-stacked-spacing * 2) ) !important;;
 		}
 	}
 }
@@ -170,30 +170,30 @@
 @media @media-query-desktop {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Box
-	.fki-box {
-		margin-bottom: @fki-box-md-stacked-spacing !important;;
+	.os2-box {
+		margin-bottom: @os2-box-md-stacked-spacing !important;;
 	}
 
-	.fki-box-small-spacing {
+	.os2-box-small-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-md-stacked-spacing / 3) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-md-stacked-spacing / 3) ) !important;;
 		}
 	}
 
-	.fki-box-large-spacing {
+	.os2-box-large-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-md-stacked-spacing * 2) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-md-stacked-spacing * 2) ) !important;;
 		}
 	}
 }
@@ -202,30 +202,30 @@
 @media @media-query-large-desktop {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Box
-	.fki-box {
-		margin-bottom: @fki-box-lg-stacked-spacing !important;;
+	.os2-box {
+		margin-bottom: @os2-box-lg-stacked-spacing !important;;
 	}
 
-	.fki-box-small-spacing {
+	.os2-box-small-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-lg-stacked-spacing / 3) ) !important;;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-lg-stacked-spacing / 3) ) !important;;
 		}
 	}
 
-	.fki-box-large-spacing {
+	.os2-box-large-spacing {
 
-		&.fki-box,
-		> .fki-box {
-			margin-bottom: floor( (@fki-box-lg-stacked-spacing * 2) ) !important;
+		&.os2-box,
+		> .os2-box {
+			margin-bottom: floor( (@os2-box-lg-stacked-spacing * 2) ) !important;
 		}
 	}
 }
@@ -234,21 +234,21 @@
 @media print {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // Touch
 .touch {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // No touch
 .no-touch {
 
 	// Box
-	.fki-box {}
+	.os2-box {}
 }
 
 // --------------------------------------------------
@@ -256,16 +256,16 @@
 // --------------------------------------------------
 
 // Box mixin
-.fki-mixin-box(@heading-background-color, @heading-font-color) {
+.os2-mixin-box(@heading-background-color, @heading-font-color) {
 
 	&,
-	>	.fki-box {
+	>	.os2-box {
 
-		.fki-box-heading {
+		.os2-box-heading {
 			background-color: @heading-background-color;
 
 			.pane-title,
-			.fki-box-heading-title {
+			.os2-box-heading-title {
 
 				&,
 				> a {
