--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/calendar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/calendar.less
@@ -3,63 +3,63 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-calendar
+// | - .os2-calendar
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-calendar-width: 40px;
-@fki-calendar-border-radius: @border-radius-base;
-@fki-calendar-background-color: @body-bg;
+@os2-calendar-width: 40px;
+@os2-calendar-border-radius: @border-radius-base;
+@os2-calendar-background-color: @body-bg;
 
-@fki-calendar-month-top-bottom-padding: 0;
-@fki-calendar-month-background-color: @state-primary-bg;
-@fki-calendar-month-font-family: @font-family-base;
-@fki-calendar-month-font-color: @state-primary-text;
-@fki-calendar-month-font-size: @font-size-small;
-@fki-calendar-month-font-weight: @font-weight;
+@os2-calendar-month-top-bottom-padding: 0;
+@os2-calendar-month-background-color: @state-primary-bg;
+@os2-calendar-month-font-family: @font-family-base;
+@os2-calendar-month-font-color: @state-primary-text;
+@os2-calendar-month-font-size: @font-size-small;
+@os2-calendar-month-font-weight: @font-weight;
 
-@fki-calendar-day-top-bottom-padding: 0;
-@fki-calendar-day-font-family: @font-family-base;
-@fki-calendar-day-font-color: @brand-primary;
-@fki-calendar-day-font-size: @font-size-large;
-@fki-calendar-day-font-weight: @font-weight-bold;
+@os2-calendar-day-top-bottom-padding: 0;
+@os2-calendar-day-font-family: @font-family-base;
+@os2-calendar-day-font-color: @brand-primary;
+@os2-calendar-day-font-size: @font-size-large;
+@os2-calendar-day-font-weight: @font-weight-bold;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Calendar
-.fki-calendar {
-	width: @fki-calendar-width;
-	background-color: @fki-calendar-background-color;
-	border-radius: @fki-calendar-border-radius;
+.os2-calendar {
+	width: @os2-calendar-width;
+	background-color: @os2-calendar-background-color;
+	border-radius: @os2-calendar-border-radius;
 
-	.fki-calendar-day {
+	.os2-calendar-day {
 		display: block;
-		font-family: @fki-calendar-day-font-family;
-		font-size: @fki-calendar-day-font-size;
-		.line-height(@fki-calendar-day-font-size);
-		color: @fki-calendar-day-font-color;
-		font-weight: @fki-calendar-day-font-weight;
+		font-family: @os2-calendar-day-font-family;
+		font-size: @os2-calendar-day-font-size;
+		.line-height(@os2-calendar-day-font-size);
+		color: @os2-calendar-day-font-color;
+		font-weight: @os2-calendar-day-font-weight;
 		text-align: center;
-		padding: @fki-calendar-day-top-bottom-padding 0;
+		padding: @os2-calendar-day-top-bottom-padding 0;
 	}
 
-	.fki-calendar-month {
+	.os2-calendar-month {
 		display: block;
-		font-family: @fki-calendar-month-font-family;
-		font-size: @fki-calendar-month-font-size;
-		.line-height(@fki-calendar-month-font-size);
-		color: @fki-calendar-month-font-color;
-		font-weight: @fki-calendar-month-font-weight;
-		background-color: @fki-calendar-month-background-color;
-		.border-top-radius(@fki-calendar-border-radius);
+		font-family: @os2-calendar-month-font-family;
+		font-size: @os2-calendar-month-font-size;
+		.line-height(@os2-calendar-month-font-size);
+		color: @os2-calendar-month-font-color;
+		font-weight: @os2-calendar-month-font-weight;
+		background-color: @os2-calendar-month-background-color;
+		.border-top-radius(@os2-calendar-border-radius);
 		text-align: center;
 		text-transform: uppercase;
-		padding: @fki-calendar-month-top-bottom-padding 0;
+		padding: @os2-calendar-month-top-bottom-padding 0;
 	}
 }
 
@@ -67,25 +67,25 @@
 // Variants
 // --------------------------------------------------
 
-.fki-box,
-.fki-box-primary {
-	.fki-mixin-calendar(@state-primary-bg, @state-primary-text, @fki-calendar-day-font-color);
+.os2-box,
+.os2-box-primary {
+	.os2-mixin-calendar(@state-primary-bg, @state-primary-text, @os2-calendar-day-font-color);
 }
 
-.fki-box-secondary {
-	.fki-mixin-calendar(@state-secondary-bg, @state-secondary-text, @fki-calendar-day-font-color);
+.os2-box-secondary {
+	.os2-mixin-calendar(@state-secondary-bg, @state-secondary-text, @os2-calendar-day-font-color);
 }
 
-.fki-box-tertiary {
-	.fki-mixin-calendar(@state-tertiary-bg, @state-tertiary-text, @fki-calendar-day-font-color);
+.os2-box-tertiary {
+	.os2-mixin-calendar(@state-tertiary-bg, @state-tertiary-text, @os2-calendar-day-font-color);
 }
 
-.fki-box-quaternary {
-	.fki-mixin-calendar(@state-quaternary-bg, @state-quaternary-text, @fki-calendar-day-font-color);
+.os2-box-quaternary {
+	.os2-mixin-calendar(@state-quaternary-bg, @state-quaternary-text, @os2-calendar-day-font-color);
 }
 
-.fki-box-quinary {
-	.fki-mixin-calendar(@state-quinary-bg, @state-quinary-text, @fki-calendar-day-font-color);
+.os2-box-quinary {
+	.os2-mixin-calendar(@state-quinary-bg, @state-quinary-text, @os2-calendar-day-font-color);
 }
 
 // --------------------------------------------------
@@ -96,77 +96,77 @@
 @media @media-query-mobile {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Print
 @media print {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // Touch
 .touch {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // No touch
 .no-touch {
 
 	// Calendar
-	.fki-calendar {}
+	.os2-calendar {}
 }
 
 // --------------------------------------------------
@@ -174,16 +174,16 @@
 // --------------------------------------------------
 
 // Calendar mixin
-.fki-mixin-calendar(@month-background-color, @month-font-color, @day-font-color) {
+.os2-mixin-calendar(@month-background-color, @month-font-color, @day-font-color) {
 
-	&.fki-calendar,
-	.fki-calendar {
+	&.os2-calendar,
+	.os2-calendar {
 
-		.fki-calendar-day {
+		.os2-calendar-day {
 			color: @day-font-color;
 		}
 
-		.fki-calendar-month {
+		.os2-calendar-month {
 			color: @month-font-color;
 			background-color: @month-background-color;
 		}
