--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/nav-tabs.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/nav-tabs.less
@@ -1,18 +1,18 @@
-@fki-nav-tabs-spacing:                 @line-height-computed;
-@fki-nav-tabs-font-color:              @btn-default-color;
-@fki-nav-tabs-background-color:        @btn-default-bg;
-@fki-nav-tabs-hover-font-color:        darken(@fki-nav-tabs-font-color, 5%);
-@fki-nav-tabs-hover-background-color:  darken(@fki-nav-tabs-background-color, 15%);
-@fki-nav-tabs-active-font-color:       @btn-secondary-color;
-@fki-nav-tabs-active-background-color: @btn-secondary-bg;
-@fki-nav-tabs-border-radius:           @border-radius-base;
-@fki-nav-tabs-transition-time:         @bs3-designer-transition-time;
-@fki-nav-tabs-stacked-spacing:         5px;
-@fki-nav-tabs-arrow-height:            5px;
-@fki-nav-tabs-arrow-width:             8px;
+@os2-nav-tabs-spacing:                 @line-height-computed;
+@os2-nav-tabs-font-color:              @btn-default-color;
+@os2-nav-tabs-background-color:        @btn-default-bg;
+@os2-nav-tabs-hover-font-color:        darken(@os2-nav-tabs-font-color, 5%);
+@os2-nav-tabs-hover-background-color:  darken(@os2-nav-tabs-background-color, 15%);
+@os2-nav-tabs-active-font-color:       @btn-secondary-color;
+@os2-nav-tabs-active-background-color: @btn-secondary-bg;
+@os2-nav-tabs-border-radius:           @border-radius-base;
+@os2-nav-tabs-transition-time:         @bs3-designer-transition-time;
+@os2-nav-tabs-stacked-spacing:         5px;
+@os2-nav-tabs-arrow-height:            5px;
+@os2-nav-tabs-arrow-width:             8px;
 
-@fki-nav-tabs-top-bottom-inner-spacing: @padding-base-vertical;
-@fki-nav-tabs-left-right-inner-spacing: @padding-base-horizontal;
+@os2-nav-tabs-top-bottom-inner-spacing: @padding-base-vertical;
+@os2-nav-tabs-left-right-inner-spacing: @padding-base-horizontal;
 
 // Content tabs container
 .content-tabs-container {
@@ -21,14 +21,14 @@
   // Nav tabs
   .nav-tabs {
     display: inline-block;
-    margin-bottom: floor( (@fki-nav-tabs-spacing - @fki-nav-tabs-arrow-height) );
+    margin-bottom: floor( (@os2-nav-tabs-spacing - @os2-nav-tabs-arrow-height) );
     border: 0;
 
     li {
 
       // Stacked
       + li {
-        margin-left: @fki-nav-tabs-stacked-spacing;
+        margin-left: @os2-nav-tabs-stacked-spacing;
       }
 
       a {
@@ -36,17 +36,17 @@
         &,
         &:hover,
         &:focus {
-          padding: @fki-nav-tabs-top-bottom-inner-spacing @fki-nav-tabs-left-right-inner-spacing;
-          color: @fki-nav-tabs-font-color;
-          background-color: @fki-nav-tabs-background-color;
-          border-radius: @fki-nav-tabs-border-radius;
+          padding: @os2-nav-tabs-top-bottom-inner-spacing @os2-nav-tabs-left-right-inner-spacing;
+          color: @os2-nav-tabs-font-color;
+          background-color: @os2-nav-tabs-background-color;
+          border-radius: @os2-nav-tabs-border-radius;
           border: none;
-          .transition(all @fki-nav-tabs-transition-time ease-in-out);
+          .transition(all @os2-nav-tabs-transition-time ease-in-out);
         }
 
         &:hover {
-          color: @fki-nav-tabs-hover-font-color;
-          background-color: @fki-nav-tabs-hover-background-color;
+          color: @os2-nav-tabs-hover-font-color;
+          background-color: @os2-nav-tabs-hover-background-color;
         }
       }
 
@@ -58,8 +58,8 @@
           &,
           &:hover,
           &:focus {
-            color: @fki-nav-tabs-active-font-color;
-            background-color: @fki-nav-tabs-active-background-color;
+            color: @os2-nav-tabs-active-font-color;
+            background-color: @os2-nav-tabs-active-background-color;
           }
 
           // After
@@ -68,14 +68,14 @@
             display: block;
             position: absolute;
             left: 50%;
-            bottom: floor( (0 - (@fki-nav-tabs-arrow-height * 2)) );
+            bottom: floor( (0 - (@os2-nav-tabs-arrow-height * 2)) );
             width: 0;
             height: 0;
             overflow: hidden;
-            margin-left: floor( (0 - @fki-nav-tabs-arrow-width) );
-            border-width: @fki-nav-tabs-arrow-height @fki-nav-tabs-arrow-width;
+            margin-left: floor( (0 - @os2-nav-tabs-arrow-width) );
+            border-width: @os2-nav-tabs-arrow-height @os2-nav-tabs-arrow-width;
             border-style: solid;
-            border-color: @fki-nav-tabs-active-background-color transparent transparent;
+            border-color: @os2-nav-tabs-active-background-color transparent transparent;
           }
         }
       }
