--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/node-basket.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/node-basket.less
@@ -129,4 +129,4 @@
 // --------------------------------------------------
 
 // Basket mixin
-.fki-mixin-node-basket() {}
+.os2-mixin-node-basket() {}
