--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/list/list-node-basket.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/list/list-node-basket.less
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-node-list-node-basket
+// | - .os2-node-list-node-basket
 // |
 
 // --------------------------------------------------
@@ -15,13 +15,13 @@
 // --------------------------------------------------
 
 // List - node basket
-.fki-node-list-node-basket {
+.os2-node-list-node-basket {
 
-	.fki-node-list-heading {
+	.os2-node-list-heading {
 
-		.fki-node-list-heading-date,
-		.fki-node-list-heading-title,
-		.fki-node-list-heading-time-ago {
+		.os2-node-list-heading-date,
+		.os2-node-list-heading-title,
+		.os2-node-list-heading-time-ago {
 			display: inline-block;
 		}
 	}
@@ -35,77 +35,77 @@
 @media @media-query-mobile {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Print
 @media print {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // Touch
 .touch {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // No touch
 .no-touch {
 
 	// List - node basket
-	.fki-node-list-node-basket {}
+	.os2-node-list-node-basket {}
 }
 
 // --------------------------------------------------
@@ -113,4 +113,4 @@
 // --------------------------------------------------
 
 // List - node basket - mixin
-.fki-mixin-list() {}
+.os2-mixin-list() {}
