--- a/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser-message-notification.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/view-modes/node/teaser/teaser-message-notification.less
@@ -3,29 +3,29 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-message-notification-teaser
+// | - .os2-message-notification-teaser
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-message-notification-teaser-background-color: @state-secondary-bg;
-@fki-message-notification-teaser-heading-color: @state-secondary-text;
+@os2-message-notification-teaser-background-color: @state-secondary-bg;
+@os2-message-notification-teaser-heading-color: @state-secondary-text;
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
 // Message notification
-.fki-message-notification-teaser {
+.os2-message-notification-teaser {
 
-	&.fki-box {
-		background-color: @fki-message-notification-teaser-background-color;
+	&.os2-box {
+		background-color: @os2-message-notification-teaser-background-color;
 
-		.fki-node-teaser-heading {
+		.os2-node-teaser-heading {
 
-			.fki-node-teaser-heading-title {
+			.os2-node-teaser-heading-title {
 
 				&,
 				> a {
@@ -34,7 +34,7 @@
 					&:hover,
 					&:focus,
 					&:active {
-						color: @fki-message-notification-teaser-heading-color;
+						color: @os2-message-notification-teaser-heading-color;
 					}
 				}
 			}
@@ -47,26 +47,26 @@
 // --------------------------------------------------
 
 // With image
-.fki-message-notification-teaser {
+.os2-message-notification-teaser {
 
-	&.fki-message-notification-teaser-variant-with-image {
-		background-color: @fki-spotbox-with-image-background-color;
+	&.os2-message-notification-teaser-variant-with-image {
+		background-color: @os2-spotbox-with-image-background-color;
 
-		.fki-node-teaser-heading {
+		.os2-node-teaser-heading {
 
-			.fki-node-teaser-heading-title {
+			.os2-node-teaser-heading-title {
 				.heading-h4;
 
 				&,
 				a {
-					color: @fki-spotbox-with-image-heading-color;
+					color: @os2-spotbox-with-image-heading-color;
 				}
 			}
 		}
 
-		.fki-node-teaser-image {
+		.os2-node-teaser-image {
 			display: block;
-			.border-top-radius(@fki-spotbox-border-radius);
+			.border-top-radius(@os2-spotbox-border-radius);
 			overflow: hidden;
 
 			img {
@@ -74,7 +74,7 @@
 			}
 		}
 
-		.fki-node-teaser-body {
+		.os2-node-teaser-body {
 			display: none;
 		}
 	}
@@ -88,77 +88,77 @@
 @media @media-query-mobile {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Print
 @media print {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // Touch
 .touch {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // No touch
 .no-touch {
 
 	// Message notification
-	.fki-message-notification-teaser {}
+	.os2-message-notification-teaser {}
 }
 
 // --------------------------------------------------
@@ -166,4 +166,4 @@
 // --------------------------------------------------
 
 // Message notification mixin
-.fki-mixin-spotbox-teaser() {}
+.os2-mixin-spotbox-teaser() {}
